Lab4/.cabal-sandbox/logs/ghc-8.6.5/entropy-0.4.1.6-4Xf22xG6TAd4W9JuK62DDv.log
Installing library in C:\Users\Emil\Documents\code\School\DIT961\Lab4\.cabal-sandbox\x86_64-windows-ghc-8.6.5\entropy-0.4.1.6-4Xf22xG6TAd4W9JuK62DDv
   #include <sys/random.h>
              ^~~~~~~~~~~~~~
  |
3 | #include <sys/random.h>
  |          ^
compilation terminated.
`gcc.exe' failed in phase `C Compiler'. (Exit code: 1)
Result of libc getrandom() Test: False

testSyscallGetrandom-13428\testSyscallGetrandom.c:4:10: error:
     fatal error: sys/syscall.h: No such file or directory
     #include <sys/syscall.h>
              ^~~~~~~~~~~~~~~
  |
4 | #include <sys/syscall.h>
  |          ^
compilation terminated.
`gcc.exe' failed in phase `C Compiler'. (Exit code: 1)
Result of syscall getrandom() Test: False
testGetentropy-13428\testGetentropy.c: In function 'main':

testGetentropy-13428\testGetentropy.c:6:12: error:
     warning: implicit declaration of function 'getentropy'; did you mean 'getopt'? [-Wimplicit-function-declaration]
         return getentropy(&tmp, sizeof(tmp));
                ^~~~~~~~~~
                getopt
  |
6 |     return getentropy(&tmp, sizeof(tmp));
  |            ^
testGetentropy-13428\testGetentropy.o:testGetentropy.c:(.text+0x1a): undefined reference to `getentropy'
collect2.exe: error: ld returned 1 exit status
`gcc.exe' failed in phase `Linker'. (Exit code: 1)
Result of getentropy() Test: False
Preprocessing library for entropy-0.4.1.6..
Building library for entropy-0.4.1.6..
[1 of 2] Compiling System.EntropyWindows ( System\EntropyWindows.hs, dist\dist-sandbox-ece26921\build\System\EntropyWindows.o )

System\EntropyWindows.hs:100:1: warning: [-Wunsupported-calling-conventions]
    * the 'stdcall' calling convention is unsupported on this platform,
      treating as ccall
    * When checking declaration:
        foreign import stdcall unsafe "CryptAcquireContextA" c_cryptAcquireCtx
          :: Ptr HCRYPTPROV
             -> CString -> CString -> Word32 -> Word32 -> IO Int32
    |
100 | foreign import stdcall unsafe "CryptAcquireContextA"
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...

System\EntropyWindows.hs:102:1: warning: [-Wunsupported-calling-conventions]
    * the 'stdcall' calling convention is unsupported on this platform,
      treating as ccall
    * When checking declaration:
        foreign import stdcall unsafe "CryptGenRandom" c_cryptGenRandom
          :: HCRYPTPROV -> Word32 -> Ptr Word8 -> IO Int32
    |
102 | foreign import stdcall unsafe "CryptGenRandom"
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...

System\EntropyWindows.hs:104:1: warning: [-Wunsupported-calling-conventions]
    * the 'stdcall' calling convention is unsupported on this platform,
      treating as ccall
    * When checking declaration:
        foreign import stdcall unsafe "CryptReleaseContext" c_cryptReleaseCtx
          :: HCRYPTPROV -> Word32 -> IO Int32
    |
104 | foreign import stdcall unsafe "CryptReleaseContext"
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
[2 of 2] Compiling System.Entropy   ( System\Entropy.hs, dist\dist-sandbox-ece26921\build\System\Entropy.o )
cabal: Leaving directory 'C:\Users\Emil\AppData\Local\Temp\cabal-tmp-14335\entropy-0.4.1.6'
